# Android-Performance

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/supertramp/performance/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/supertramp/app/: BActivity.kt  MainActivity.kt
app/src/main/java/com/supertramp/performance/: BActivity.kt  MainActivity.kt  Trace.kt
app/src/main/res/layout/: activity_b.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/supertramp/performance/: ExampleUnitTest.kt
buildSrc/: build.gradle  publish.gradle
buildSrc/src/main/kotlin/com/supertramp/performance/: FileUtil.kt  PerformancePlugin.kt  ReflectUtil.kt
buildSrc/src/main/kotlin/com/supertramp/performance/ext/: Systrace.kt
buildSrc/src/main/kotlin/com/supertramp/performance/transform/: TraceTransform.kt
buildSrc/src/main/kotlin/com/supertramp/performance/transform/asm/: AsmUtil.kt  CustomClassVisitor.kt  MethodCollector.kt  SysTraceVisitor.kt  TraceMethod.kt
buildSrc/src/main/kotlin/com/supertramp/performance/transform/utils/: InputHandler.kt
gradle/wrapper/: gradle-wrapper.properties
memory/: build.gradle
memory/src/main/: AndroidManifest.xml
memory/src/main/cpp/: CMakeLists.txt  async_safe_log.cpp  elf_reader.cpp  hprof_dump.cpp  hprof_strip.cpp  kwai_dlfcn.cpp  map_util.hpp  ndk_port.cpp
memory/src/main/cpp/include/: hprof_dump.h  hprof_strip.h
memory/src/main/cpp/include/async_safe/: CHECK.h
memory/src/main/cpp/include/linker/: elf_wrapper.h
memory/src/main/cpp/include/log/: kcheck.h  log.h  log_event_list.h  log_id.h  log_main.h  log_radio.h  log_read.h  log_system.h  logprint.h
memory/src/main/cpp/include/log/android/: klog.h
memory/src/main/java/com/supertramp/memory/: HeapDumper.java
repo/com/supertramp/plugin/performance/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
repo/com/supertramp/plugin/performance/1.0/: performance-1.0.jar.md5  performance-1.0.jar.sha1  performance-1.0.pom  performance-1.0.pom.md5  performance-1.0.pom.sha1
trace/: build.gradle  publish.gradle
trace/src/main/: AndroidManifest.xml
trace/src/main/java/com/supertramp/performance/: Trace.kt
xhook/: build.gradle
xhook/src/main/cpp/: CMakeLists.txt
